Fix some warnings
Fix some warnings
new Integer(integer)
getRotationElevation --> getRotationElevationRadians etc.